--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 #spring.datasource.username = postgres
 #spring.datasource.password = 27072001
 
-spring.datasource.url=containers-us-west-42.railway.app/railway
+spring.datasource.url=jdbc:postgresql://containers-us-west-42.railway.app/railway
 spring.datasource.username = postgres
 spring.datasource.password = 4Sh3ytuQ6Rmc7eVn00Tm
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
