--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 #spring.datasource.username = postgres
 #spring.datasource.password = 27072001
 
-spring.datasource.url=jdbc:postgresql://containers-us-west-42.railway.app/railway
-spring.datasource.username = postgres
-spring.datasource.password = 4Sh3ytuQ6Rmc7eVn00Tm
-
+spring.datasource.url=jdbc:postgresql://dpg-cf7msj9a6gdpab8omh8g-a.oregon-postgres.render.com:5432/database_springboot
+spring.datasource.username = database_springboot_user
+spring.datasource.password = B1HiYs4oyefFvElZhIjCgGhv0qEmVsMh
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
