--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 #spring.datasource.username = postgres
 #spring.datasource.password = 27072001
 
-spring.datasource.url=jdbc:postgresql://dpg-cf7msj9a6gdpab8omh8g-a.oregon-postgres.render.com:5432/database_springboot
-spring.datasource.username = database_springboot_user
-spring.datasource.password = B1HiYs4oyefFvElZhIjCgGhv0qEmVsMh
+spring.datasource.url=jdbc:postgresql://containers-us-west-42.railway.app:5432/railway
+spring.datasource.username = postgres
+spring.datasource.password = 4Sh3ytuQ6Rmc7eVn00Tm
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -19,5 +19,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialec
 
 spring.jpa.hibernate.ddl-auto = update
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-
+java.runtime.version=11
 
